--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,10 @@
   <title>Jegybazar</title>
   <base href="/">
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="">
+  <meta name="author" content="">
+
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
